# local-derived

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  example.cpp
src/include/: local_derived.h
test/: CMakeLists.txt  assignment.cpp  constructors.cpp  observers.cpp  simple_hierarchy.h  swap.cpp
